--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="meter_placeholder">Select meter</string>
     <string name="meter_reading_label">Meter Reading</string>
     <string name="meter_reading_placeholder">Input meter reading</string>
+    <string name="payment_balance">Payment Balance</string>
+    <string name="open_pdf">Open PDF</string>
+    <string name="show_in_here">Show here</string>
 </resources>
