--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="show_in_here">Show here</string>
     <string name="period">Period</string>
     <string name="period_label">Input Period</string>
+    <string name="whatAdjasting">What to edit</string>
 </resources>
